--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -3,4 +3,4 @@ steps:
   args: ['build', '-t', 'gcr.io/my-project/my-image', '.']
   timeout: 500s
 - name: 'gcr.io/cloud-builders/docker'
-  args: ['push', 'gcr.io/my-project/my-image
+  args: ['push', 'gcr.io/my-project/my-image']
