--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,7 +1,4 @@
 steps:
 - name: 'gcr.io/cloud-builders/docker'
-  args: ['build', '-t', 'gcr.io/my-project/my-image', '.']
-  timeout: 500s
-- name: 'gcr.io/cloud-builders/docker'
-  args: ['push', 'gcr.io/my-project/my-image']
-  images: ['gcr.io/my-project/myimage']
+  args: ['build', '-t', 'gcr.io/my-project/my-image1', '.']
+
