--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,6 +1,6 @@
 steps:
 - name: 'gcr.io/cloud-builders/docker'
-  args: ['build', '-t', 'gcr.io/nisha123/image1', './demo']
+  args: ['build', '-t', 'gcr.io/nisha123/image1', '.']
 options: 
  logging: CLOUD_LOGGING_ONLY
 
