--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
 	<artifactId>repository1</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>Payroll</name>
+	<project>nisha123</project>
 	<description>Demo project for Spring Boot</description>
 	<packaging>jar</packaging>
 	<properties>
