--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,6 @@
 	<artifactId>repository1</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>Payroll</name>
-	<project>nisha123</project>
 	<description>Demo project for Spring Boot</description>
 	<packaging>jar</packaging>
 	<properties>
@@ -46,12 +45,11 @@
 				<groupId>com.google.cloud.tools</groupId>
 				<artifactId>appengine-maven-plugin</artifactId>
 				<version>2.4.0</version>
-		    	</plugin>
-		    	<plugin>
-				<groupId>org.eclipse.jetty</groupId>
-				<artifactId>jetty-maven-plugin</artifactId>
-				<version>9.3.7.v20160115</version>
-		    	</plugin>
+				<configuration>
+				  <version>1</version>
+				  <projectId>nisha123</projectId>
+				</configuration>
+      			</plugin>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
