--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,10 +1,4 @@
 steps:
-- name: 'gcr.io/cloud-builders/docker'
-  args: [ 'build', '-t', 'us-central1-docker.pkg.dev/nisha123/nisha1/payroll', '.' ]
-options: 
- logging: CLOUD_LOGGING_ONLY
-images:
-- 'us-central1-docker.pkg.dev/nisha123/nisha1/payroll'
-- name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
-  args: ['-c', 'gcloud config set app/cloud_build_timeout 1600 && gcloud app deploy']
-timeout: '1600s'
+- name: "gcr.io/cloud-builders/gcloud"
+  args: ["app", "deploy"]
+timeout: "1600s"
