--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -5,3 +5,6 @@ options:
  logging: CLOUD_LOGGING_ONLY
 images:
 - 'us-central1-docker.pkg.dev/nisha123/nisha1/payroll'
+- name: "gcr.io/cloud-builders/gcloud"
+  args: ["app", "deploy"]
+timeout: "16000s"
