--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -2,5 +2,5 @@ steps:
 - name: "gcr.io/cloud-builders/gcloud"
   args: ["app", "deploy"]
 options: 
- logging: CLOUD_LOGGING_ONL
+ logging: CLOUD_LOGGING_ONLY
 
