--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,8 @@
 	<packaging>jar</packaging>
 	<properties>
 		<java.version>11</java.version>
+		<maven.compiler.source>8</maven.compiler.source>
+		<maven.compiler.target>8</maven.compiler.target>
 	</properties>
 	<dependencies>
 		<dependency>
