--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,4 +1,7 @@
 steps:
+- name: maven:3-jdk-11
+  entrypoint: mvn
+  args: [ 'package','-Dmaven.test.skip=true' ]
 - name: "gcr.io/cloud-builders/gcloud"
   args: ["app", "deploy"]
 options: 
